# Radiography

./: .gitignore  CHANGELOG.md  LICENSE  RELEASE.md  Radiography.spec  app.icns  buildozer.spec  dmg_settings.py  exposure_chart_dataset.csv  exposure_chart_dataset.json  main.py  p4a_hook.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  main.yml  release.yml  test.yml
.p4a/recipes/reportlab/: __init__.py
docs/: asme_b36_10_19_pipe_data.json
src/core/: __init__.py  api1104.py  asme_b36.py  calculator.py  exposure_charts.py  procedure_check.py  report.py  translation.py  updater.py  version.py
src/mobile/: main.py
src/mobile/kv/compact/: step_dimensions.kv  step_exposure.kv  step_results.kv  step_sketch.kv  step_technique.kv
src/mobile/lib/: app_state.py  pdf_helper.py
src/mobile/responsive/: expanded_layout.py  layout_selector.py  medium_layout.py
src/mobile/screens/: step_dimensions.py  step_exposure.py  step_results.py  step_sketch.py  step_technique.py
src/ui/: compensation.py  main_window.py  sketch.py
src/ui/panels/: defect_panel.py  input_panel.py  warnings_compliance_panel.py
tests/: test_api1104.py  test_asme_b36.py  test_calculator.py  test_compensation.py  test_exposure_charts.py  test_main_window.py  test_procedure_check.py  test_report.py  test_sketch.py  test_translation.py
