[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "Radiography"
version = "1.2.0"  # Keep in sync with src/core/version.py
description = "Radiographic Testing (RT) exposure time calculator and inspection report generator"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "Pillow>=9.5.0",
]

[project.scripts]
radiography = "main:main"
